# django-react-guide

./: .gitignore  Procfile  Procfile.txt  README.md  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  webpack-stats.json  webpack.config.js
.github/workflows/: main.yml
Hogwarts/: asgi.py  settings.py  urls.py  wsgi.py
Wizard/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
Wizard/migrations/: 0001_initial.py  0002_auto_20210626_1019.py
api/: urls.py
backend/: settings.py  urls.py
django_react/: settings.py
django_react_starter/: settings.py  urls.py
frontend/: package-lock.json  package.json  urls.py  webpack.config.js
frontend/src/: App.css  App.js  index.js
frontend/src/components/: App.js  HomePage.js
frontend/static/frontend/: main.js
frontend/templates/frontend/: index.html
public/: index.html
src/: AddSpell.js  App.js  Navbar.js  ViewSpell.js
